Pull request fix